--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,9 @@ android {
     }
 
     buildFeatures {
-        buildConfig true
+        buildConfig = true
+        dataBinding = false
+        viewBinding = false
     }
 
     compileOptions {
@@ -164,7 +166,7 @@ dependencies {
 
     testImplementation "com.google.truth:truth:1.1.3"
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'androidx.test:core:1.4.0'
+    testImplementation 'androidx.test:core:1.5.0'
     testImplementation "org.robolectric:robolectric:4.7.3"
     testImplementation "org.powermock:powermock-module-junit4:$POWERMOCK_VERSION"
     testImplementation "org.powermock:powermock-module-junit4-rule:$POWERMOCK_VERSION"
